--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zhima</title>
-    <link rel="stylesheet" href="./css/libs/normalize.css">
-    <link rel="stylesheet" href="./css/libs/bulma.css">
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/bulma.css">
     <link rel="stylesheet" href="./css/main.css">
     <!-- <link rel="stylesheet" href="css/debug.css"> -->
     <link href='https://fonts.googleapis.com/css?family=Noto+Serif+SC:600&subset=chinese-simplified' rel='stylesheet' type='text/css'>
@@ -29,7 +29,7 @@
                             <a class="navbar-item color-white">
                                 博客
                             </a>
-                            <a class="navbar-item color-white">
+                            <a class="navbar-item color-white" href="./html/yiyan.html">
                                 一言
                             </a>
                             <a class="navbar-item color-white">
