--- a/html/yiyan.html
+++ b/html/yiyan.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Pure CSS Box Hover with Background Effect</title>
+  <title>一言</title>
 
 
   <link href='https://fonts.googleapis.com/css?family=Noto+Serif+SC:600&subset=chinese-simplified' rel='stylesheet' type='text/css'>
