--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                             <a class="navbar-item color-white" href="./html/yiyan.html">
                                 一言
                             </a>
-                            <a class="navbar-item color-white">
-                                Documentation
+                            <a class="navbar-item color-white" href="./html/yiyan2.html">
+                                一言2
                             </a>
                         </div>
                     </div>
